<?xml version="1.0"?>
<package>
  <name>arlobot_webif</name>
  <version>0.1.0</version>
  <description>
     arlobot_webif is a port of a web page interface that provides a joy stick interface using html and javascript.
     The html page uses ROSlib to publish joy stick messages which are then converted to twist commands.
  </description>
  <maintainer email="theslators@gmail.com">Tim Slator</maintainer>
  <license>BSD</license>
  <url type="website">t</url>
  <author email="theslators@gmail.com">Tim Slator</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>arlobot_bringup</run_depend>

  <export>

  </export>
</package>
